--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,4 +1,6 @@
 <% provide(:title, "") %>
+<div class="center jumbotron">
     <h1>勤怠システム</h1>
     <p>このアプリケーションでは、登録されたユーザーの勤怠情報を閲覧・登録・編集することができます。</p>
-  
+ <%= link_to "Sign up", '#', class: "btn btn-lg btn-primary" %>
+ </div>
