--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,5 +2,13 @@
 
 .user-table {
   vertical-align: middle;
-  text-align: center;
+text-align: center;
+}
+
+.label-signup {
+  margin-top: 5px;
+}
+
+.btn-signup {
+  margin-top: 10px;
 }
