--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,11 @@
     <!-- headerの内容がこの１行で収まる -->
     <%= render 'layouts/header' %>
     <div class="container">
-    <%= yield %>
-    <%= debug(params) if Rails.env.development? %>
+      <% flash.each do |message_type, msg| %>
+        <div class="alert alert-<%= message_type %>"><%= msg %></div>
+      <% end %>
+      <%= yield %>
+      <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
 </html>
