--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,10 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "Attendance App", '#', id: "logo" %>
+    <%= link_to "Attendance App", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Top", root_path %></li>
-        <li><%= link_to "Log in", '#' %></li>
+        <li><%= link_to "Log in", login_path %></li>
       </ul>
     </nav>
   </div>
