--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,25 +1,26 @@
-<% provide(:title, @user.name) %>
+　<% provide(:title, @user.name) %>
 <div>
   <table class="table table-bordered table-condensed user-table">
     <tr>
-      <td>【<%= l(@first_day, format: :middle)%>】勤怠管理表</td>
-      <td>指定勤務時間:<%= format_basic_info(@user.work_time) %></td>
-      <td>基本時間:<%= format_basic_info(@user.basic_time) %></td>
-      <td>月初日:<%= l(@first_day, format: :short) %></td>
+      <td>【<%= l(@first_day, format: :middle) %>】勤怠管理表</td>
+      <td>指定勤務時間：<%= format_basic_info(@user.work_time) %></td>
+      <td>基本時間：<%= format_basic_info(@user.basic_time) %></td>
+      <td>月初日：<%= l(@first_day, format: :short) %></td>
     </tr>
 
     <tr>
       <td>所属：<%= @user.department.present? ? @user.department : "未所属" %></td>
-      <td>名前:<%= @user.name %></td>
-      <td>出勤日数</td>
-      <td>月末日:<%= l(@last_day, format: :short) %></td>
+      <td>名前：<%= @user.name %></td>
+      <td>出勤日数:<%= @worked_sum %>日</td>
+      <td>月末日：<%= l(@last_day, format: :short) %></td>
     </tr>
   </table>
 </div>
 
 <div class="btn-users-show">
   <%= link_to "⇦ 前月へ", user_path(date: @first_day.prev_month), class: "btn btn-info" %>
-  <%= link_to "⇦ 次月へ", user_path(date: @first_day.next_month), class: "btn btn-info" %>
+  <%= link_to "次月へ ⇨", user_path(date: @first_day.next_month), class: "btn btn-info" %>
+</div>
 
 <div>
   <table class="table table-bordered table-condensed table-hover" id="table-attendances">
@@ -41,17 +42,44 @@
           <td><%= l(day.worked_on, format: :short) %></td>
           <td><%= $days_of_the_week[day.worked_on.wday] %></td>
           <td>
-            <% if (Date.current == day.worked_on) && day.started_at.nil? %>
-              <%= link_to "出勤登録", user_attendance_path(@user, day), method: :patch, class: "btn btn-primary btn-attendance" %>
-           　
-           <% end %>
+            <% if btn_text = attendance_state(day) %>
+              <%= link_to "#{btn_text}登録", user_attendance_path(@user, day), method: :patch, class: "btn btn-primary btn-attendance" %>
+            <% end %>
           </td>
           <td><%= l(day.started_at, format: :time) if day.started_at.present? %></td>
-          <td></td>
-          <td></td>
+          <td><%= l(day.finished_at, format: :time) if day.finished_at.present? %></td>
+          <td>
+            <% if day.started_at.present? && day.finished_at.present? %>
+              <%= str_times = working_times(day.started_at, day.finished_at) %>
+              <% @total_working_times = @total_working_times.to_f + str_times.to_f %>
+            <% end %>
+          </td>
           <td></td>
         </tr>
       <% end %>
     </tbody>
+    
+  <tfoot>
+    <tr>
+      <td colspan="2">累計日数</td>
+      <td colspan="2">総合勤務時間</td>
+      <td colspan="2">累計在社時間</td>
+      <td rowspan="2"></td>
+    </tr>
+    <tr>
+      <td colspan="2"><%= @attendances.count %></td>
+    　<td colspan="2"><%= format_basic_info(@user.work_time).to_f * @worked_sum %></td>
+      <td colspan="2"><%= format("%.2f", @total_working_times.to_f) %></td>
+    </tr>
+    </tfoot>
+   </table>
+  </div>
+  
+    
+      
+    
+    
+    
+    
   </table>
 </div>
