Finish edit-attendances

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,7 +2,14 @@
 
 .user-table {
   vertical-align: middle;
-text-align: center;
+  text-align: center;
+}
+
+/* ユーザー情報下ボタン */
+
+.btn-users-show {
+  margin-top: -10px;
+  margin-bottom: 10px;
 }
 
 /* ユーザー勤怠情報テーブル */
@@ -18,9 +25,8 @@ text-align: center;
   }
 }
 
+/* 入力フォーム */
 
-
-/* 入力フォーム*/
 .label-signup {
   margin-top: 5px;
 }
